New /quick_status endpoint
